<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">IKA</string>
    <string name="app_name2">Ika</string>
    <string name="contentDescription">Imagen</string>
    <string name="invalid_mail">Ingrese mail valido</string>
    <string name="invalid_password">Minimo de 6 caracteres</string>
    <string name="fontMain" tools:ignore="ReferenceType">@font/roboto_regular</string>
    <string name="font1" tools:ignore="ReferenceType">@font/lobster_two_bold</string>
    <string name="font2" tools:ignore="ReferenceType">@font/lobster_two_bold_italic</string>
    <string name="font3" tools:ignore="ReferenceType">@font/lobster_two_italic</string>
    <string name="font4" tools:ignore="ReferenceType">@font/lobster_two_regular</string>
    <string name="font5" tools:ignore="ReferenceType">@font/roboto_bold</string>
    <string name="font6" tools:ignore="ReferenceType">@font/roboto_medium</string>
    <string name="font7" tools:ignore="ReferenceType">@font/roboto_regular</string>
    <string name="PERMISO_FONT" tools:ignore="ReferenceType">@font/roboto_regular</string>
    <string name="PERMISO_BTON_DENIED">Cancelar</string>
    <string name="PERMISO_BTON_GRANTED">Permitir</string>
    <string name="PERMISO_WRITE_EXTERNAL_STORAGE">Requerimos del permiso al almacenamiento interno para poder acceder al contenido multimedia del dispositivo tales como imagenes o videos</string>
    <string name="fontFormularioLogin" tools:ignore="ReferenceType">@font/roboto_regular</string>
    <string name="fontBtFormularioLogin" tools:ignore="ReferenceType">@font/lobster_two_regular</string>
    <string name="mailTxFormularioLogin">Correo electronico</string>
    <string name="signupLogin">No tienes una cuenta?</string>
    <string name="forgotPasswordTxLogin">Olvidaste la contraseña?</string>
    <string name="recoverPasswordTxLogin"><b>Recuperar aquí</b></string>
    <string name="signupLoginbtn">SignUp</string>
    <string name="startlogin"><b>Iniciar Sesión</b></string>
    <string name="txBtSendMailForgotPassword">Recuperar</string>
    <string name="txInfoForgotPassword">Se le enviara un mensaje de recuperacion de su cuenta a la direccion de correo electronico vinculada del usuario.</string>
    <string name="tx1FooterOpUser">Configuración</string>
    <string name="tx2FooterOpUser">Editar Perfil</string>
    <string name="txTopicShopHeaderShop"><b>Tienda</b></string>
    <string name="txTopicConfigHeaderShop">Ajustes y privacidad</string>
    <string name="nameUser"><b>Usuario de Ika</b></string>
    <string name="mailUser">Correo de usuario</string>
    <string name="textUserNameEditProfile">Nombre de usuario</string>
    <string name="hintUserNameEditProfile">Nombre de usuario</string>
    <string name="textNameEditProfile">Nombre</string>
    <string name="hintNameEditProfile">Nombre</string>
    <string name="textBiografiaEditProfile">Biografia del Perfil</string>
    <string name="hintBiografiaEditProfile">Biografia</string>
    <string name="textPasswordEditProfile">Contraseña de tu cuenta</string>
    <string name="hintPasswordEditProfile">Contraseña</string>
    <string name="textoBotonEditProfile">Guardar</string>
    <string name="fontTopicSignUp" tools:ignore="ReferenceType">@font/roboto_bold</string>
    <string name="fontHintSignUp" tools:ignore="ReferenceType">@font/roboto_regular</string>
    <string name="fontInfoSignUp" tools:ignore="ReferenceType">@font/roboto_bold</string>
    <string name="textMailSignUp">Ingresa un correo electronico</string>
    <string name="hintMailSignUp">Correo electronico</string>
    <string name="textPasswordSignUp">Ingresa una contraseña</string>
    <string name="hintPasswordSignUp">contraseña</string>
    <string name="textoTittleSignUp">Crea tu cuenta</string>
    <string name="textoBotonSignUp"><b>Siguiente</b></string>
    <string name="fontTopicSignUpFinish" tools:ignore="ReferenceType">@font/roboto_bold</string>
    <string name="fontHintSignUpFinish" tools:ignore="ReferenceType">@font/roboto_regular</string>
    <string name="fontInfoSignUpFinish" tools:ignore="ReferenceType">@font/roboto_bold</string>
    <string name="textoTittleSignUpFinish">Datos de Usuario</string>
    <string name="textUserSignUpFinish">Cual es tu nombre</string>
    <string name="hintUserSignUpFinish">Nombre</string>
    <string name="textUserNameSignUpFinish">Como te gustaria llamarte?</string>
    <string name="hintUserNameSignUpFinish">Nombre de usuario</string>
    <string name="textUserBiografiaSignUpFinish">Biografia del perfil</string>
    <string name="hintUserBiografiaSignUpFinish">Biografía</string>
    <string name="textoBotonSignUpFinish"><b>Finalizar</b></string>
    <string name="fontTargetaCategoriaFeed" tools:ignore="ReferenceType">@font/roboto_bold</string>
    <string name="fontTopicMainFeed" tools:ignore="ReferenceType">@font/roboto_bold</string>
    <string name="TopicMainFeed">Categorias</string>
    <string name="categoria1">Frutas o Verduras</string>
    <string name="categoria2">Bebidas</string>
    <string name="categoria3">Lacteos</string>
    <string name="categoria4">Pan</string>
    <string name="fontBiografiaUserHome" tools:ignore="ReferenceType">@font/roboto_regular</string>
    <string name="mail">Correo</string>
    <string name="password">Contraseña</string>
    <string name="txTopic1">Bienvenido</string>
    <string name="descriptionImg">Imagen</string>
    <string name="opcion1">Información</string>
    <string name="opcion2">Version App</string>
    <string name="fontList1" tools:ignore="ReferenceType">@string/font7</string>
    <string name="fontList2" tools:ignore="ReferenceType">@string/font5</string>
    <string name="fontList3" tools:ignore="ReferenceType">@string/font6</string>
    <string name="fontListTextHeader">@string/fontList2</string>
    <string name="fontListTextContentTitle">@string/fontList3</string>
    <string name="fontListTextContentContent">@string/fontList1</string>
    <string name="fontListTextContentContentInfo">@string/fontList1</string>
    <string name="fontListTextContentContentInfoAction">@string/fontList1</string>
</resources>