<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundMain"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/solicitudPermiso"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        tools:ignore="UnusedAttribute">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="80dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgPhotoUser"
                    android:layout_width="@dimen/sizeImgPermisosSolicitud"
                    android:layout_height="@dimen/sizeImgPermisosSolicitud"
                    android:contentDescription="@string/descriptionImg"
                    android:rotation="@integer/sizeRotationImageUser"
                    android:src="@drawable/imgPermisosSolicitud"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints,TooDeepLayout"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:paddingHorizontal="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/permisoExplicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/PERMISO_FONT"
                    android:justificationMode="inter_word"
                    android:text="@string/PERMISO_WRITE_EXTERNAL_STORAGE"
                    android:textAlignment="@integer/alignmentStart"
                    android:textColor="@color/PERMISO_COLOR_TEXTO"
                    android:textSize="@dimen/PERMISO_SIZE_TEXT" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/permisoGranted"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/esquinas_redondeadas6"
                            android:elevation="@dimen/PERMISO_boton_elevation"
                            android:layout_marginVertical="@dimen/PERMISO_marginVertical"
                            android:layout_marginHorizontal="@dimen/PERMISO_marginHorizontal"
                            android:paddingHorizontal="@dimen/PERMISO_paddingHorizontal"
                            android:paddingVertical="@dimen/PERMISO_paddingVertical"
                            android:text="@string/PERMISO_BTON_GRANTED"
                            android:textAlignment="@integer/alignmentCenter"
                            android:textColor="@color/PERMISO_COLOR_TEXTO_BOTONES"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="MissingConstraints"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/permisoDenied"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/esquinas_redondeadas6"
                            android:elevation="@dimen/PERMISO_boton_elevation"
                            android:layout_marginVertical="@dimen/PERMISO_marginVertical"
                            android:layout_marginHorizontal="@dimen/PERMISO_marginHorizontal"
                            android:paddingHorizontal="@dimen/PERMISO_paddingHorizontal"
                            android:paddingVertical="@dimen/PERMISO_paddingVertical"
                            android:text="@string/PERMISO_BTON_DENIED"
                            android:textAlignment="@integer/alignmentCenter"
                            android:textColor="@color/PERMISO_COLOR_TEXTO_BOTONES"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="MissingConstraints" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>