<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundMain"
    tools:context=".ForgotPassword">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="60dp">


            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="MissingConstraints,UselessParent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/retInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="30dp"
                        android:paddingVertical="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tvInfoForgotPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="20dp"
                            android:text="@string/txInfoForgotPassword"
                            android:textColor="@color/colorTextMain"
                            android:textSize="@dimen/sizeTextMain"
                            android:justificationMode="inter_word"
                            tools:ignore="UnusedAttribute" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/txtEmailForgotPassword"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:minHeight="@dimen/minHeigtFormularioLogin"
                                    android:background="@drawable/backgroundFormularioLogin"
                                    android:layout_marginVertical="@dimen/marginVFormularioLogin"
                                    android:paddingHorizontal="@dimen/paddingHorizontalFormularioLogin"
                                    android:fontFamily="@string/fontFormularioLogin"
                                    android:elegantTextHeight="true"
                                    android:hint="@string/mailUser"
                                    android:inputType="textEmailAddress"
                                    android:textAlignment="textStart"
                                    android:textColor="@color/colorTxFormularioLogin"
                                    android:textColorHint="@color/colorTxFormularioLogin"
                                    android:textSize="@dimen/sizeTxFormularioLogin"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:ignore="Autofill,TextContrastCheck,TextFields,UnusedAttribute"/>

                                <LinearLayout
                                    android:id="@+id/resetText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:paddingVertical="@dimen/paddingIconFormularioLogin"
                                    android:paddingHorizontal="@dimen/paddingIconFormularioLogin"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/iconCancel"
                                        tools:ignore="TooDeepLayout" />

                                </LinearLayout>

                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/recoverForgotPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/marginVBtFormularioLogin"
                            android:background="@drawable/colorBtBgSendMailForgotPassword"
                            android:fontFamily="@string/fontBtFormularioLogin"
                            android:paddingVertical="@dimen/paddingVBtFormularioLogin"
                            android:text="@string/txBtSendMailForgotPassword"
                            android:textAlignment="center"
                            android:textColor="@color/colorBtFormularioLogin"
                            android:textSize="@dimen/sizeTxBtFormularioLogin"
                            tools:ignore="TextContrastCheck" />


                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>